<resources>
    <string name="app_name"> enozom </string>
    <string name="welcome">Welcome</string>
    <string name="enter_your_data_to_start_the_journey">Enter your data to start the journey</string>
    <string name="username">Username</string>
    <string name="job_title">Job title</string>
    <string name="gender">Gender</string>
    <string name="age">Age</string>
    <string name="save">Save</string>
    <string name="show_users">show Users</string>
    <string name="data_saved">data saved success ..</string>
    <string name="input_required">Input required</string>
    <string name="mail">Your Mail</string>
    <string name="skills">Skills</string>
    <string name="Delete">Delete</string>
    <string name="edit">Edit</string>

    <array name="skills_list">
        <item>Android</item>
        <item>Ios</item>
        <item>PHP</item>
        <item>ASP</item>
        <item>NET</item>
    </array>
</resources>